# GliderPRORaylib

./: CMakeLists.txt  Prefix.h  README.md
Headers/: About.h  DialogUtils.h  Environ.h  Externs.h  GliderProtos.h  House.h  MainWindow.h  Map.h  ObjectEdit.h  RubberBands.h
Sources/: AppleEvents.c  ColorUtils.c  DebugUtilities.c  Dynamics3.c  GameOver.c  Grease.c  HouseIO.c  HouseLegal.c  Input.c  Interactions.c  Link.c  MainWindow.c  ObjectAdd.c  ObjectDraw2.c  ObjectDrawAll.c  ObjectEdit.c  ObjectRects.c  Play.c  Player.c  Room.c  RoomGraphics.c  RoomInfo.c  Scrap.c  SelectHouse.c  Sound.c  Trip.c
src/: About.h  Banner.c  DialogUtils.c  DynamicMaps.c  DynamicMaps.h  Dynamics.c  Environ.c  Events.c  Externs.h  GameOver.h  GliderDefines.h  GliderStructs.h  GliderTypes.h  GliderVars.h  HighScores.c  House.c  House.h  HouseInfo.c  InterfaceInit.c  Map.c  Marquee.c  Marquee.h  Menu.c  ObjectDraw.c  ObjectInfo.c  Objects.c  Objects.h  Play.h  Player.h  RectUtils.h  Room.h  RoomGraphics.h  SavedGames.c  Scoreboard.c  Scoreboard.h  Settings.c  StringUtils.c  StructuresInit.c  Tools.h  Transit.c  (+6 more)
src/glider_pro/: About.c  AnimCursor.c  AppleEvents.c  Coordinates.c  DebugUtilities.c  DialogUtils.c  DialogUtils.h  Dynamics2.c  Environ.c  Environ.h  Externs.h  FileError.c  GliderDefines.h  GliderProtos.h  GliderStructs.h  GliderTypes.h  GliderVars.h  Grease.c  HighScores.c  House.c  HouseIO.c  HouseInfo.c  HouseLegal.c  InterfaceInit.c  Link.c  Main.c  MainWindow.c  MainWindow.h  Map.c  Map.h  Marquee.h  Menu.c  Modes.c  Music.c  ObjectEdit.h  ObjectInfo.c  Play.c  Player.h  (+22 more)
(+9 files in other folders)
